# AutoStarRail

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
AutoStarRail/: CMakeLists.txt
AutoStarRail/AdditionalTest/: AsrPtrTest.cpp  BoostUrlTest.cpp  ICUTest.cpp  NlohmannJsonEnumTest.cpp
AutoStarRail/AskrHttp/: CMakeLists.txt
AutoStarRail/AskrHttp/src/: App.cpp
AutoStarRail/AskrHttp/src/controller/: MyController.cpp  MyController.hpp
AutoStarRail/AskrHttp/src/dto/: DTOs.hpp
AutoStarRail/Core/: CMakeLists.txt
AutoStarRail/Core/Exceptions/include/AutoStarRail/Core/Exceptions/: AsrException.h  TypeError.h
AutoStarRail/Core/Exceptions/src/: AsrException.cpp  InterfaceNotFoundException.cpp  TypeError.cpp
AutoStarRail/Core/ForeignInterfaceHost/include/AutoStarRail/Core/ForeignInterfaceHost/: AsrGuid.h  AsrStringImpl.h  CppSwigInterop.h  ErrorLensManager.h  ForeignInterfaceHost.h  IAsrCaptureManagerImpl.h  IAsrContextImpl.h  IAsrGuidVectorImpl.h  IAsrInputFactoryVectorImpl.h  IAsrPluginManagerImpl.h  IForeignLanguageRuntime.h  InputFactoryManager.h  Plugin.h  PluginManager.h  PythonHost.h  TaskManager.h
AutoStarRail/Core/ForeignInterfaceHost/src/: AsrGuid.cpp  AsrIidVectorImpl.cpp  AsrIidVectorImpl.h  AsrPluginInfoVectorImpl.cpp  AsrPluginInfoVectorImpl.h  AsrStringImpl.cpp  AsrSwigPluginInfo.cpp  AsrSwigPluginInfoVector.cpp  CppHost.cpp  CppHost.h  CppSwigInterop.cpp  ErrorLensManager.cpp  ForeignInterfaceHost.cpp  ForeignInterfaceHost.h  ForeignInterfaceHostEnum.h  IAsrBase.cpp  IAsrCaptureManager.cpp  IAsrCaptureManagerImpl.cpp  IAsrContextImpl.cpp  IAsrGuidVectorImpl.cpp  IAsrGuidVectorImpl.h  IAsrInputFactoryVectorImpl.cpp  IAsrInspectable.cpp  IAsrPlugin.cpp  IAsrPluginManagerImpl.cpp  IAsrPluginManagerImpl.h  IForeignLanguageRuntime.cpp  IForeignLanguageRuntime.h  InputFactoryManager.cpp  JavaHost.cpp  JavaHost.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  PythonHost.cpp  PythonHost.h  TaskManager.cpp  TemporaryPluginObjectStorage.cpp  TemporaryPluginObjectStorage.h
AutoStarRail/Core/ForeignInterfaceHost/test/: GetIidsTest.cpp  PluginDescTest.cpp  PythonHostTest.cpp
AutoStarRail/Core/GlobalSettingsManager/include/AutoStarRail/Core/GlobalSettingsManager/: GlobalSettingsManager.h
AutoStarRail/Core/GlobalSettingsManager/src/: GlobalSettingsManager.cpp
AutoStarRail/Core/Impl/include/AutoStarRail/Core/Impl/: AsrOrt.h
AutoStarRail/Core/Impl/src/: AsrOrt.cpp  IAsrImage.cpp  Scheduler.cpp
AutoStarRail/Core/Logger/src/: AsrLogger.cpp  IAsrLogRequesterImpl.cpp  IAsrLogRequesterImpl.h  Logger.cpp
AutoStarRail/Core/OcvWrapper/src/: AsrCV.cpp  Config.h  IAsrImage.cpp  IAsrImageImpl.cpp  IAsrImageImpl.h
AutoStarRail/Core/OrtWrapper/src/: AsrOrt.cpp  AsrOrt.h  Config.h  PPOcr.cpp
AutoStarRail/Core/SettingsManager/src/: IAsrSettingsImpl.cpp
AutoStarRail/Core/TaskScheduler/src/: TaskScheduler.cpp
AutoStarRail/Core/Utils/src/: IAsrBasicErrorLensImpl.cpp  IAsrBasicErrorLensImpl.h  IAsrMemory.cpp  InternalUtils.cpp
AutoStarRail/Core/i18n/src/: AsrResultTranslator.cpp  GlobalLocale.cpp  i18n.cpp
AutoStarRail/Core/i18n/test/: I18nAsrResult.cpp  I18nAsrResultTest.cpp
AutoStarRail/Http/: CMakeLists.txt
AutoStarRail/Http/src/: App.cpp  AppComponent.hpp
AutoStarRail/Http/src/controller/: Controller.hpp  ControllerUtils.hpp
AutoStarRail/Http/src/dto/: Global.hpp  Log.hpp  Profile.hpp  Settings.hpp
AutoStarRail/Plugins/: CMakeLists.txt
AutoStarRail/Plugins/AdbCapture/src/: AdbCaptureFactoryImpl.cpp  AdbCaptureFactoryImpl.h  AdbCaptureImpl.cpp  AdbCaptureImpl.h  ErrorLensImpl.cpp  ErrorLensImpl.h  PluginImpl.cpp  PluginImpl.h
AutoStarRail/Plugins/AsrAdbCapture/: AsrAdbCapture.json
AutoStarRail/Plugins/AsrAdbCapture/src/: AdbCaptureFactoryImpl.cpp  AdbCaptureFactoryImpl.h  AdbCaptureImpl.cpp  AdbCaptureImpl.h  DllMain.cpp  ErrorLensImpl.cpp  ErrorLensImpl.h  PluginImpl.cpp  PluginImpl.h
AutoStarRail/Plugins/AsrAdbTouch/: AsrAdbTouch.json
AutoStarRail/Plugins/AsrAdbTouch/src/: AdbTouch.cpp  AdbTouch.h  AdbTouchFactoryImpl.cpp  AdbTouchFactoryImpl.h  DllMain.cpp  PluginImpl.cpp  PluginImpl.h
AutoStarRail/Qt5Gui/: CMakeLists.txt
AutoStarRail/Qt5Gui/Qt5Gui/src/: main.cpp
AutoStarRail/Utils/include/AutoStarRail/Utils/: CommonUtils.hpp  Config.h  EnumUtils.hpp  Expected.h  GetIids.hpp  InternalTypeList.hpp  PresetTypeInheritanceInfo.h  QueryInterface.hpp  QueryInterfaceImpl.hpp  StringUtils.h  Timer.hpp  UnexpectedEnumException.h  fmt.h
AutoStarRail/Utils/src/: Expected.cpp  StringUtils.cpp  UnexpectedEnumException.cpp
(+44 files in other folders)
